# EyerPlayer

./: .gitignore  README.md  init_3rdlib.sh
EyerPlayerCore/: .gitignore  CMakeLists.txt  update_common.sh
EyerPlayerCore/EyerAV/: CMakeLists.txt  EyerAV.hpp  EyerAVAV.hpp  EyerAVAudioFrameUtil.cpp  EyerAVBitmap.cpp  EyerAVBitstreamFilter.cpp  EyerAVBitstreamFilter.hpp  EyerAVBitstreamFilterPrivate.hpp  EyerAVCropUtil.cpp  EyerAVDecoder.cpp  EyerAVEncoder.cpp  EyerAVEncoderPrivate.hpp  EyerAVFrame.cpp  EyerAVFrame2.cpp  EyerAVFramePrivate.hpp  EyerAVFrameUtil.cpp  EyerAVFrameWeight.cpp  EyerAVPacket.cpp  EyerAVPacketPrivate.hpp  EyerAVPacketQueue.cpp  EyerAVPacketQueue.hpp  EyerAVRational.cpp  EyerAVReader.cpp  EyerAVStream.cpp  EyerAVStreamPrivate.hpp  EyerAVTool.cpp  EyerAVWriter.cpp
EyerPlayerCore/EyerCodec/: CMakeLists.txt  EyerCodec.hpp  EyerMediaCodec.cpp  EyerMediaCodec2.cpp
EyerPlayerCore/EyerCore/: CMakeLists.txt  EyerBuffer.cpp  EyerBuffer.hpp  EyerCore.hpp  EyerLinkedList.hpp  EyerLockQueue.hpp  EyerLog.cpp  EyerLog.hpp  EyerMap.hpp  EyerMapEle.hpp  EyerMat2x1.cpp  EyerMat3x1.cpp  EyerMat4x1.cpp  EyerMath.hpp  EyerString.cpp  EyerString.hpp  EyerTime.cpp  EyerTime.hpp  EyerUtil.cpp  EyerUtil.hpp
EyerPlayerCore/EyerDASH/: CMakeLists.txt  EyerAdaptationSet.cpp  EyerAdaptationSet.hpp  EyerDASH.hpp  EyerDASHReader.cpp  EyerDASHReader.hpp  EyerDASHReaderThread.cpp  EyerDASHReaderThread.hpp  EyerDASHStream.cpp  EyerDASHStream.hpp  EyerDASHStreamReaderThread.cpp  EyerDASHStreamReaderThread.hpp  EyerMPD.cpp  EyerMPD.hpp  EyerRepresentation.cpp  EyerRepresentation.hpp  EyerSegmentTemplate.cpp  EyerSegmentTemplate.hpp  MP4Buffer.cpp  MP4Buffer.hpp
EyerPlayerCore/EyerEventQueue/: CMakeLists.txt  EyerEventQueue.cpp  EyerEventQueue.hpp
EyerPlayerCore/EyerGL/: CMakeLists.txt  EyerGL.hpp  EyerGLDraw.cpp  EyerGLFrameBuffer.cpp  EyerGLProgram.cpp  EyerGLRenderTask.cpp  EyerGLRenderTaskQueue.cpp  EyerGLShader.cpp  EyerGLTexture.cpp  EyerGLVAO.cpp  GLHeader.h
EyerPlayerCore/EyerGLContext/: CMakeLists.txt  EyerGLContext.cpp  EyerGLContext.hpp  EyerGLContextThread.cpp  EyerGLContextThread.hpp  EyerGLContextThread_Android.cpp  EyerGLContextThread_Windows.cpp
EyerPlayerCore/EyerGLRenderTask/: CMakeLists.txt  TextureRenderTask.cpp  TextureRenderTask.hpp  YUVRender.cpp  YUVRender.hpp  YUVRenderTask.cpp  YUVRenderTask.hpp
EyerPlayerCore/EyerGLShader/: CMakeLists.txt  Shader.cpp  Shader.hpp  ShaderH.hpp
EyerPlayerCore/EyerJNI/: CMakeLists.txt  EyerJNIEnvManager.cpp  EyerJNIEnvManager.h
EyerPlayerCore/EyerMP4/: BoxType.cpp  BoxType.hpp  CMakeLists.txt  EyerISOTypeReader.cpp  EyerISOTypeReader.hpp  EyerMP4.hpp  MP4Box.cpp  MP4Box.hpp  MP4BoxAVC1.cpp  MP4BoxAVC1.hpp  MP4BoxAVCC.cpp  MP4BoxAVCC.hpp  MP4BoxDREF.cpp  MP4BoxDREF.hpp  MP4BoxELST.cpp  MP4BoxELST.hpp  MP4BoxFTYP.cpp  MP4BoxFTYP.hpp  MP4BoxHDLR.cpp  MP4BoxHDLR.hpp  MP4BoxMDHD.cpp  MP4BoxMDHD.hpp  MP4BoxMEHD.cpp  MP4BoxMEHD.hpp  MP4BoxMFHD.cpp  MP4BoxMFHD.hpp  MP4BoxMVHD.cpp  MP4BoxMVHD.hpp  MP4BoxSTCO.cpp  MP4BoxSTCO.hpp  MP4BoxSTSC.cpp  MP4BoxSTSC.hpp  MP4BoxSTSD.cpp  MP4BoxSTSD.hpp  MP4BoxSTTS.cpp  MP4BoxSTTS.hpp  MP4BoxSampleEntry.cpp  MP4BoxSampleEntry.hpp  MP4BoxTFHD.cpp  MP4BoxTFHD.hpp  (+14 more)
EyerPlayerCore/EyerNet/: CMakeLists.txt  EyerHttpPool.cpp  EyerHttpPool.hpp  EyerHttpPoolPrivate.hpp  EyerHttpTask.cpp  EyerHttpTask.hpp  EyerHttpTaskPrivate.hpp  EyerNet.cpp  EyerNet.hpp  EyerSimplestHttp.cpp  EyerSimplestHttp.hpp
EyerPlayerCore/EyerOpenSL/: CMakeLists.txt  EyerOpenSL.cpp  EyerOpenSL.hpp
EyerPlayerCore/EyerPlayer/: AVDecoderThread.cpp  AVDecoderThreadMediaCodec.cpp  AVDecoderThreadSoftware.cpp  AVFrameQueueManager.cpp  AVPlayCtrThread.cpp  AVReaderThread.cpp  CMakeLists.txt  EventManager.hpp  EventTag.cpp  EventTag.hpp  EventType.hpp  EyerPlayer.cpp  EyerPlayer.hpp  EyerPlayerAndroidSurface.cpp  EyerPlayerCallback.cpp  EyerPlayerConfig.cpp  EyerPlayerConstant.hpp  EyerPlayerEventManager.cpp  EyerPlayerEventManager.hpp  EyerPlayerPrivate.hpp  EyerPlayerRenderThread.cpp  EyerPlayerRenderThread.hpp  EyerPlayerThread.hpp  EyerPlayerThreadManager.cpp  EyerPlayerThreadManager.hpp  MediaInfo.cpp  MediaInfo.hpp  PlayerEvent.hpp  PlayerQueueManager.hpp  StreamInfo.cpp  StreamInfo.hpp
EyerPlayerCore/EyerPlayerIOS/: CMakeLists.txt  EyerPlayerIOS.cpp  EyerPlayerIOS.hpp  README.md
EyerPlayerCore/EyerPlayerJNI/: CMakeLists.txt  EyerGLContextJNI.cpp  EyerPlayerGLContext.cpp  EyerPlayerJNI.cpp  EyerPlayerJNIVideoView.cpp  EyerPlayerRender.cpp  JniUtil.cpp  JniUtil.h  com_eyer_eyerplayer_EyerPlayerJNI.h
EyerPlayerCore/EyerPlayerMain/: CMakeLists.txt  Main.cpp
EyerPlayerCore/EyerThread/: EyerThread.cpp  EyerThread.hpp
EyerPlayerLib/EyerGL/: CMakeLists.txt  EyerGL.hpp  EyerGLDraw.cpp  EyerGLTexture.cpp  GLHeader.h
src/: .gitignore  CMakeLists.txt
src/EyerAV/: CMakeLists.txt  EyerAV.hpp  EyerAVAudioFifo.cpp  EyerAVBitstreamFilter.cpp  EyerAVCSEI.cpp  EyerAVCSEI.hpp  EyerAVChannelLayout.cpp  EyerAVChannelLayout.hpp  EyerAVCodecID.cpp  EyerAVCodecID.hpp  EyerAVCodecType.cpp  EyerAVCodecType.hpp  EyerAVDecoder.cpp  EyerAVDecoder.hpp  EyerAVDecoderBoxGroup.cpp  EyerAVDecoderLine.cpp  EyerAVDecoderLine.hpp  EyerAVDecoderLineAudio.cpp  EyerAVDecoderLineParams.cpp  EyerAVEncoder.cpp  EyerAVEncoder.hpp  EyerAVEncoderParam.cpp  EyerAVEncoderParam.hpp  EyerAVFFmpegHeader.hpp  EyerAVFrame.cpp  EyerAVFrame.hpp  EyerAVFramePrivate.hpp  EyerAVPacket.cpp  EyerAVPacket.hpp  EyerAVPacketPrivate.hpp  EyerAVPixelFormat.cpp  EyerAVPixelFormat.hpp  EyerAVPixelFrame.cpp  EyerAVRational.cpp  EyerAVRational.hpp  EyerAVReader.cpp  EyerAVReader.hpp  EyerAVResample.cpp  EyerAVSampleFormat.cpp  EyerAVSampleFormat.hpp  (+16 more)
src/EyerAndroidInterface/: CMakeLists.txt  Interface.cpp  com_zzsin_eyerplayer_jni_EyerPlayerJNI.h
src/EyerColorSpace/: CMakeLists.txt  EyerColorSpace.cpp  EyerColorSpace.hpp  EyerColorSpaceHeader.hpp  EyerColorSpaceMat.cpp  EyerColorSpaceUtil.cpp  EyerColorSpaceUtil.hpp
src/EyerCore/: BLOCK_TIME.cpp  CMakeLists.txt  EndianUtil.cpp  EndianUtil.hpp  EyerBitStream.cpp  EyerBuffer.cpp  EyerBufferPlus.cpp  EyerBufferPlus.hpp  (+23 more)
(+400 files in other folders)
